<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">CityTour - Escuchando SMS</string>
    <string name="app_name">CityTourSMS</string>
    <string name="InvalidBodySMS">Mensaje Incorrento</string>
    <string name="SMSAudioguide">AUDIOGUIA</string>
    <string name="SMSTaxi">TAXI</string>
    <string name="SMSPay">PAGO</string>
    <string name="SMSSuccessAudioguide">Te enviamos la audioguia que solicitaste</string>
    <string name="SMSFailureAudioguide">La audioguia solicitada no existe</string>
    <string name="TitleTextFieldUrl">Ingrese la URL del web services</string>
    <string name="TitleCheckBox">Servicio habilitado</string>
    <string name="WSURLDefault">http://192.168.42.2</string>
	<string name="Save">Guardar</string>
	<string name="WSURLMessage">La nueva URL fue seteada</string>
	<string name="Log">LOG:\n</string>
</resources>